# BI-PA2-Simple-Spreadsheet

./: .gitignore  CCell.h  CFunction.cpp  CFunction.h  CMakeLists.txt  CNumber.cpp  CNumber.h  CString.cpp  CString.h  Makefile  README.md  main.cpp  zadani.txt
examples/: test.txt
src/: CCell.cpp  CCell.h  CCursor.cpp  CCursor.h  CFunction.cpp  CFunction.h  CNumber.cpp  CNumber.h  COperation.cpp  COperation.h  CString.cpp  CString.h  CTable.cpp  CTable.h  doxygen.conf  main.cpp
